--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TB-client",
-  "homepage": "https://<conniepanz.github.io/<TB-client>",
+  "homepage": "https://<conniepanz.github.io/<TB-client->",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
